Fixed Modal Scrollbar Issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -38,7 +38,7 @@ body {
   margin: 10px;
   padding: 20px;
   max-height: calc(100% - 60px);
-  overflow-y: scroll;
+  overflow-y: auto;
   border-radius: 8px;
   -moz-border-radius: 8px;
   -webkit-border-radius: 8px;
